// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList With anchors renders correctly 1`] = `
<div>
  <div
    class="css-1mxr31d-boxStyles"
  >
    <div
      class="css-1lvzxao-boxStyles"
    >
      <h2
        class="css-s8h0nj-boxStyles"
      >
        Complete these tasks
      </h2>
      <span
        class="css-axuon-boxStyles"
      >
        2
         of 
        4
         tasks completed
      </span>
    </div>
    <ul
      class="css-1r8gefe-boxStyles-TaskListItemsContainer"
    >
      <li
        class="css-16jufl0-TaskListItem"
      >
        <a
          class="css-4p8na6-TextLink-boxStyles-TaskListItem"
          href="#"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1wpwzfj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Check eligibility
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-6t7fnj-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                    fill="currentColor"
                    stroke="none"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Completed
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12L20 12"
            />
            <path
              d="M16 7L21 12L16 17"
            />
          </svg>
        </a>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <a
          class="css-4p8na6-TextLink-boxStyles-TaskListItem"
          href="#"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1wpwzfj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Lorem ipsum dolor sit amet
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-6t7fnj-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                    fill="currentColor"
                    stroke="none"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Completed
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12L20 12"
            />
            <path
              d="M16 7L21 12L16 17"
            />
          </svg>
        </a>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <a
          class="css-k3htlr-TextLink-boxStyles-TaskListItem"
          href="#"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1d9b4dj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 13.5C7.32843 13.5 8 12.8284 8 12C8 11.1716 7.32843 10.5 6.5 10.5C5.67157 10.5 5 11.1716 5 12C5 12.8284 5.67157 13.5 6.5 13.5Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M17.5 13.5C18.3284 13.5 19 12.8284 19 12C19 11.1716 18.3284 10.5 17.5 10.5C16.6716 10.5 16 11.1716 16 12C16 12.8284 16.6716 13.5 17.5 13.5Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Case Studies
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-y64xti-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.5 13.5C7.32843 13.5 8 12.8284 8 12C8 11.1716 7.32843 10.5 6.5 10.5C5.67157 10.5 5 11.1716 5 12C5 12.8284 5.67157 13.5 6.5 13.5Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M17.5 13.5C18.3284 13.5 19 12.8284 19 12C19 11.1716 18.3284 10.5 17.5 10.5C16.6716 10.5 16 11.1716 16 12C16 12.8284 16.6716 13.5 17.5 13.5Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  In progress
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12L20 12"
            />
            <path
              d="M16 7L21 12L16 17"
            />
          </svg>
        </a>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <a
          class="css-4p8na6-TextLink-boxStyles-TaskListItem"
          href="#"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1d9b4dj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                  stroke-dasharray="4 4"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Review and submit
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-y64xti-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                    stroke-dasharray="4 4"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Not started
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              >
                Not available until previous tasks are done
              </span>
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12L20 12"
            />
            <path
              d="M16 7L21 12L16 17"
            />
          </svg>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`TaskList With buttons renders correctly 1`] = `
<div>
  <div
    class="css-1mxr31d-boxStyles"
  >
    <div
      class="css-1lvzxao-boxStyles"
    >
      <h2
        class="css-s8h0nj-boxStyles"
      >
        Complete these tasks
      </h2>
      <span
        class="css-axuon-boxStyles"
      >
        2
         of 
        4
         tasks completed
      </span>
    </div>
    <ul
      class="css-1r8gefe-boxStyles-TaskListItemsContainer"
    >
      <li
        class="css-16jufl0-TaskListItem"
      >
        <button
          class="css-iur4wf-BaseButton-boxStyles-TaskListItem"
          type="button"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1wpwzfj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Check eligibility
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-6t7fnj-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                    fill="currentColor"
                    stroke="none"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Completed
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12L20 12"
            />
            <path
              d="M16 7L21 12L16 17"
            />
          </svg>
        </button>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <button
          class="css-iur4wf-BaseButton-boxStyles-TaskListItem"
          type="button"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1wpwzfj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                  fill="currentColor"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Lorem ipsum dolor sit amet
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-6t7fnj-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                    fill="currentColor"
                    stroke="none"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Completed
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12L20 12"
            />
            <path
              d="M16 7L21 12L16 17"
            />
          </svg>
        </button>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <button
          class="css-vdh8ne-BaseButton-boxStyles-TaskListItem"
          type="button"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1d9b4dj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 13.5C7.32843 13.5 8 12.8284 8 12C8 11.1716 7.32843 10.5 6.5 10.5C5.67157 10.5 5 11.1716 5 12C5 12.8284 5.67157 13.5 6.5 13.5Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M17.5 13.5C18.3284 13.5 19 12.8284 19 12C19 11.1716 18.3284 10.5 17.5 10.5C16.6716 10.5 16 11.1716 16 12C16 12.8284 16.6716 13.5 17.5 13.5Z"
                  fill="currentColor"
                  stroke="none"
                />
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Case Studies
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-y64xti-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.5 13.5C7.32843 13.5 8 12.8284 8 12C8 11.1716 7.32843 10.5 6.5 10.5C5.67157 10.5 5 11.1716 5 12C5 12.8284 5.67157 13.5 6.5 13.5Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M17.5 13.5C18.3284 13.5 19 12.8284 19 12C19 11.1716 18.3284 10.5 17.5 10.5C16.6716 10.5 16 11.1716 16 12C16 12.8284 16.6716 13.5 17.5 13.5Z"
                    fill="currentColor"
                    stroke="none"
                  />
                  <path
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  In progress
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              />
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12L20 12"
            />
            <path
              d="M16 7L21 12L16 17"
            />
          </svg>
        </button>
      </li>
      <li
        class="css-16jufl0-TaskListItem"
      >
        <button
          class="css-iur4wf-BaseButton-boxStyles-TaskListItem"
          type="button"
        >
          <span
            class="css-dddyaj-boxStyles"
          >
            <span
              class="css-1hgwk69-boxStyles"
            >
              <svg
                aria-hidden="true"
                class="css-1d9b4dj-TaskListItem"
                clip-rule="evenodd"
                fill-rule="evenodd"
                focusable="false"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                  stroke-dasharray="4 4"
                />
              </svg>
            </span>
            <span
              class="css-1wcx0lf-boxStyles"
            >
              <span
                class="css-84frxs-boxStyles"
                data-agds-task-list-item-text=""
              >
                Review and submit
                <span
                  class="css-avudkd-VisuallyHidden"
                >
                  .
                </span>
              </span>
              <span
                class="css-q6tqn6-boxStyles"
              >
                <svg
                  aria-hidden="true"
                  class="css-y64xti-TaskListItem"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
                    stroke-dasharray="4 4"
                  />
                </svg>
                <span
                  class="css-nqv792-boxStyles"
                >
                  Not started
                  <span
                    class="css-avudkd-VisuallyHidden"
                  >
                    .
                  </span>
                </span>
              </span>
              <span
                class="css-axuon-boxStyles"
              >
                Not available until previous tasks are done
              </span>
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1pw6exk-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12L20 12"
            />
            <path
              d="M16 7L21 12L16 17"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
</div>
`;
